--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -1,4 +1,10 @@
-.navlink:hover{
-  background: none!important;
-  color: inherit!important;
+
+.ui.inverted.menu .item, .ui.inverted.menu .item>a:not(.ui){
+  transition: 0.2s ease;
+  &:hover{
+    background: none!important;
+    color: inherit!important;
+    transform: scale(1.3);
+    transition: 0.2s ease;
+  }
 }
