--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -1,4 +1,6 @@
-
+h1{
+  font-size: 5rem;
+}
 .ui.inverted.menu .item, .ui.inverted.menu .item>a:not(.ui){
   transition: 0.2s ease;
   &:hover{
@@ -9,3 +11,9 @@
   }
 }
 
+.ui.header:last-child{
+  font-size: 4rem;
+  @media (max-width: 768px) {
+    font-size: 1.4rem
+  }
+}
