--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -1,19 +1,22 @@
 h1{
   font-size: 5rem;
 }
-.ui.inverted.menu .item, .ui.inverted.menu .item>a:not(.ui){
+
+.ui.inverted.navigation.menu{
+  .item{
   transition: 0.2s ease;
-  &:hover{
-    background: none!important;
-    color: inherit!important;
-    transform: scale(1.3);
-    transition: 0.2s ease;
+    &:hover{
+      background: none!important;
+      color: inherit!important;
+      transform: scale(1.3);
+      transition: 0.2s ease;
+    }
   }
 }
 
 .ui.header:last-child{
   font-size: 4rem;
-  @media (max-width: 768px) {
+  @media (max-width: 991px) {
     font-size: 1.4rem
   }
 }
