--- a/src/templates/blog-post.scss
+++ b/src/templates/blog-post.scss
@@ -1,3 +1,10 @@
 img{
   max-width: 100%;
 }
+
+.ui.fluid.container.header-post{
+  padding-top: 15rem;
+  @media only screen and (max-width: 1200px) {
+    padding-top: 5rem;
+  }
+}
