--- a/src/components/blog-page/headerBlog.scss
+++ b/src/components/blog-page/headerBlog.scss
@@ -1,5 +1,6 @@
 .ui.container.ui.grid.header-blog {
   margin-top: 10rem;
+  margin-bottom: 3rem;
   @media only screen and (max-width: 1200px) {
     margin-top: 5rem;
   }
