Add service worker and manifest

--- a/src/components/homepage/pitch.scss
+++ b/src/components/homepage/pitch.scss
@@ -2,17 +2,17 @@
   .row {
     padding-top: 8rem;
     padding-bottom: 8rem;
-    .toulouse- {
+    .toulouse-c42 {
       @media only screen and (min-width: 723px) {
         max-width: 90%;
       }
     }
-    .nouvelles-technologies {
+    .nouvelles-technologies-c42 {
       @media only screen and (min-width: 723px) {
         max-width: 70%;
       }
     }
-    .flexibilite {
+    .flexibilite-c42 {
       @media only screen and (min-width: 723px) {
         max-width: 60%;
       }
