--- a/src/components/blog/HeaderBlog.scss
+++ b/src/components/blog/HeaderBlog.scss
@@ -1,6 +1,14 @@
 .ui.container.ui.grid.header-blog {
   margin-top: 10rem;
-  margin-bottom: 8rem;
+  margin-bottom: 5rem;
+  .header-blog--heading {
+    margin-bottom: 2rem;
+  }
+
+  .header-blog--description {
+    max-width: 70%;
+    margin: auto;
+  }
   @media only screen and (max-width: 1200px) {
     margin-top: 5rem;
     margin-bottom: 5rem;
