Refacto: remove inline style from HeaderHome

--- a/src/components/homepage/HeaderHome.scss
+++ b/src/components/homepage/HeaderHome.scss
@@ -5,6 +5,12 @@
         margin: 20vh 0 15vh 0;
         width: 90% !important;
       }
+      .header-text-container {
+        min-width: 70%;
+        max-width: 90%;
+        margin: auto;
+        margin-top: 20rem;
+      }
     }
   }
 }
