--- a/src/components/homepage/Pitch.scss
+++ b/src/components/homepage/Pitch.scss
@@ -2,17 +2,26 @@
   .row {
     padding-top: 8rem;
     padding-bottom: 8rem;
+
+    .ui.header.primary {
+      margin-bottom: 1rem;
+    }
     .toulouse-c42 {
+      margin: auto;
       @media only screen and (min-width: 723px) {
         max-width: 90%;
       }
     }
     .nouvelles-technologies-c42 {
+      margin: auto;
+
       @media only screen and (min-width: 723px) {
         max-width: 70%;
       }
     }
     .flexibilite-c42 {
+      margin: auto;
+
       @media only screen and (min-width: 723px) {
         max-width: 60%;
       }
