--- a/src/components/homepage/Testimonials.scss
+++ b/src/components/homepage/Testimonials.scss
@@ -2,4 +2,16 @@
   padding-top: 8rem;
   padding-bottom: 8rem;
   background-color: #f9f9f9;
+  .rating-container {
+    display: flex;
+    justify-content: center;
+  }
+  .btn {
+    &--prev {
+      margin-right: 2rem;
+    }
+    &--next {
+      margin-left: 2rem;
+    }
+  }
 }
