--- a/src/components/homepage/HeaderHome.scss
+++ b/src/components/homepage/HeaderHome.scss
@@ -1,15 +1,16 @@
 .ui.grid {
   .two.column.row {
     .ui.text.container.middle.aligned.column {
-      @media only screen and (max-width: 1200px) {
-        margin: 20vh 0 15vh 0;
-        width: 90% !important;
-      }
       .header-text-container {
         min-width: 70%;
         max-width: 90%;
         margin: auto;
-        margin-top: 20rem;
+        margin: 5rem 0 auto 0;
+        width: 90% !important;
+      }
+      @media only screen and (max-width: 1000px) {
+        margin: 10vh 0 15vh 0;
+        width: 90% !important;
       }
     }
   }
