--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -1,14 +1,23 @@
 @import "../../globals.scss";
 
 //// Tous les containers gris
-.ui.fluid.container.primary {
-  margin: 0 !important;
+.ui.fluid.container {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+//// Header
+.header-comapny-img {
+  margin-top: 65px;
 }
 
 //// Members list
 .ui.container.ui.grid.members-list {
   padding-top: 8rem;
   padding-bottom: 10rem;
+  @media only screen and (max-width: 1200px) {
+    padding-bottom: 3rem;
+  }
   .center.aligned.row.members-list--container {
     margin-top: 3rem;
     .member-list--item {
@@ -21,16 +30,29 @@
 
 //// Header contact form
 .ui.container.contact-header {
-  padding: 8rem 0 8rem 0;
+  padding: 8rem 0 6rem 0;
+  @media only screen and (max-width: 1200px) {
+    padding: 5rem 0 4rem 0;
+  }
+  .contact-header--header {
+    margin-top: 4rem;
+  }
 }
 
 //// Contact form
 .ui.fluid.container.primary.contact-form-container {
-  padding: 8rem;
+  padding: 8rem 3rem 8rem 3rem;
+  @media only screen and (max-width: 1200px) {
+    padding: 5rem 1rem 5rem 1rem;
+  }
   .row.contact-form {
     padding: 3rem;
     background: white;
     border-radius: 10px;
+    margin: auto;
+    @media only screen and (max-width: 1200px) {
+      padding: 1rem;
+    }
 
     .ui.form .fields .field .ui.input input,
     .ui.form .field .ui.input input,
@@ -42,10 +64,18 @@
     .submit-btn {
       margin: 3rem auto auto auto;
       display: flex;
+      @media only screen and (max-width: 1200px) {
+        margin: 3rem auto 2rem auto;
+      }
     }
   }
-  .contact-links {
+  .contact-links--container {
     margin-top: 3rem;
+    .contact-links--item {
+      @media only screen and (max-width: 1200px) {
+        margin: 2rem 0 2rem 0;
+      }
+    }
     .icon {
       margin-right: 1rem;
     }
