--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -84,9 +84,11 @@
 
 //// Carousel locaux
 .ui.fluid.container.primary.office-carousel {
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding: 8rem 0 8rem 0;
   z-index: 0;
+  @media only screen and (max-width: 1200px) {
+    padding: 5rem 0 5rem 0;
+  }
 }
 
 // Bullets
