--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -24,6 +24,9 @@
       @media only screen and (max-width: 1200px) {
         margin-bottom: 6rem;
       }
+      .gatsby-image-wrapper {
+        border-radius: 100%;
+      }
     }
   }
 }
