Feat: add responsive burger menu

--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -7,9 +7,9 @@
 }
 
 //// Header
-.header-comapny-img {
-  margin-top: 65px;
-}
+// .header-comapny-img {
+//   margin-top: 65px;
+// }
 
 //// Members list
 .ui.container.ui.grid.members-list {
