--- a/src/components/global/Nav.scss
+++ b/src/components/global/Nav.scss
@@ -1,9 +1,19 @@
-.ui.massive.borderless.inverted.top.fixed.menu {
-  background-color: white;
-  border-radius: 0;
-  margin: 0;
-  z-index: 1;
-  .header {
-    font-family: "Poppins";
+.large-menu-classname {
+  .nav-item {
+    display: inline;
+    justify-content: center;
+  }
+}
+
+.small-menu-classname {
+  i.bars.large.icon {
+    float: left;
+    margin: 1rem 0 1rem 1rem;
+  }
+  .ui.borderless.top.fixed.menu {
+    display: block;
+    a {
+      justify-content: center;
+    }
   }
 }
