--- a/src/components/global/Nav.scss
+++ b/src/components/global/Nav.scss
@@ -10,7 +10,7 @@
     padding: 1.5rem;
     h3.ui.header {
       font-size: 1.5rem;
-      margin-bottom: 1rem;
+      margin-top: 1rem;
     }
   }
 }
