--- a/src/components/homepage/Pitch.scss
+++ b/src/components/homepage/Pitch.scss
@@ -2,6 +2,10 @@
   .row {
     padding-top: 8rem;
     padding-bottom: 8rem;
+    @media only screen and (max-width: 1200px) {
+      padding-top: 5rem;
+      padding-bottom: 5rem;
+    }
 
     .ui.header.primary {
       margin-bottom: 1rem;
