--- a/src/components/homepage/Services.scss
+++ b/src/components/homepage/Services.scss
@@ -1,8 +1,7 @@
-.services--container {
+.services-container {
   margin-top: 0;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: #f9f9f9;
   @media only screen and (max-width: 1200px) {
     padding-bottom: 2rem;
     padding-top: 5rem;
