Refacto: fixbug height carousels

--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -37,6 +37,10 @@
   @media only screen and (max-width: 1200px) {
     padding: 3rem 0 3rem 0;
   }
+  &--carousel {
+    min-height: 200px;
+    max-height: 700px;
+  }
 }
 
 // Center icon in button
