--- a/src/components/blog/HeaderBlog.scss
+++ b/src/components/blog/HeaderBlog.scss
@@ -1,20 +1,22 @@
-.ui.container.ui.grid.header-blog {
+.ui.grid.header-blog {
   margin-top: 10rem;
   margin-bottom: 5rem;
+  @media only screen and (max-width: 1200px) {
+    margin-bottom: 5rem;
+  }
   .header-blog--heading {
     margin-bottom: 2rem;
   }
 
   .header-blog--description {
-    max-width: 70%;
-    margin: auto;
-  }
-  @media only screen and (max-width: 1200px) {
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
+    max-width: 40%;
 
+    margin: auto;
+    @media only screen and (max-width: 1200px) {
+      max-width: 90%;
+    }
+  }
   .gatsby-image-wrapper {
-    max-width: 100%;
+    max-width: 90%;
   }
 }
