--- a/src/components/blog/BlogCard.scss
+++ b/src/components/blog/BlogCard.scss
@@ -1,4 +1,7 @@
 .five.wide.computer.sixteen.wide.mobile.eight.wide.tablet.column.blogcard {
   z-index: 0;
   margin-bottom: 3rem;
+  .react-reveal {
+    height: 100%;
+  }
 }
