--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -39,8 +39,11 @@
           .gatsby-image-wrapper {
             border-radius: 100%;
           }
+          h3 {
+            margin-bottom: 0.3rem;
+          }
           .meta.employee-job {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             margin-bottom: 1rem;
           }
           .socials {
