--- a/src/components/homepage/HeroHome.scss
+++ b/src/components/homepage/HeroHome.scss
@@ -9,7 +9,7 @@
         width: 90% !important;
       }
       @media only screen and (max-width: 1000px) {
-        margin: 3vh 0 8vh 0;
+        margin: 0 0 3rem 0;
         width: 90% !important;
       }
     }
