--- a/src/components/global/Nav.scss
+++ b/src/components/global/Nav.scss
@@ -1,4 +1,4 @@
-.ui.menu.borderless {
+#navbar {
   h3 {
     font-size: 1.5rem;
   }
@@ -10,7 +10,7 @@
     padding: 1.5rem;
     h3.ui.header {
       font-size: 1.5rem;
-      margin-top: 1rem;
+      margin-top: 2rem;
     }
   }
 }
