--- a/src/templates/BlogPostTemplate.scss
+++ b/src/templates/BlogPostTemplate.scss
@@ -2,14 +2,20 @@ img {
   max-width: 100%;
 }
 
-.ui.fluid.container.header-post {
+#blog-post {
   padding-top: 15rem;
   @media only screen and (max-width: 1200px) {
-    padding-top: 5rem;
+    padding-top: 10rem;
+  }
+  #blog-post-content {
+    margin-top: 5rem;
+    @media only screen and (max-width: 1200px) {
+      margin-top: 3rem;
+    }
   }
 }
 
-.ui.fluid.container.prev-next-posts-container {
+.prev-next-posts-container {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
