--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -7,17 +7,27 @@
 }
 
 //// Header
-.ui.container.ui.stackable.header-company-container {
+#header-company-container {
   min-height: 100vh;
+  margin-top: 57px;
   @media only screen and (max-width: 1200px) {
     margin-top: 10rem;
     padding-bottom: 6rem;
   }
   .header-company-text {
     max-width: 90%;
+    @media only screen and (min-width: 1200px) {
+      margin-right: 5rem;
+    }
+    h2 {
+      margin-bottom: 1rem;
+    }
   }
   .gatsby-image-wrapper {
     margin: auto;
+    @media only screen and (min-width: 1200px) and (max-width: 1800px) {
+      width: 80%;
+    }
     @media only screen and (max-width: 1200px) {
       width: 70%;
     }
