--- a/src/components/ecommerce/Ecommerce.scss
+++ b/src/components/ecommerce/Ecommerce.scss
@@ -1,7 +1,33 @@
 #hero-ecommerce-container {
-  min-height: 100vh;
+  @media only screen and (min-width: 1200px) {
+    min-height: 100vh;
+  }
+  @media only screen and (max-width: 1200px) {
+    margin-top: 57px;
+  }
+  .hero-ecommerce-heading {
+    margin-bottom: 1rem;
+  }
+  .hero-ecommerce-img {
+    @media only screen and (max-width: 1200px) {
+      margin-top: 3rem;
+      margin-bottom: 4rem;
+    }
+  }
 }
 
 #references-ecommerce-container {
   padding: 8rem 0 8rem 0;
+  @media only screen and (max-width: 1200px) {
+    padding: 5rem 0 5rem 0;
+  }
+  .references-ecommerce-heading {
+    margin-bottom: 2rem;
+  }
+  .reference-item-heading {
+    margin-bottom: 1rem;
+    @media only screen and (max-width: 1200px) {
+      margin-top: 2rem;
+    }
+  }
 }
