--- a/src/components/global/Nav.scss
+++ b/src/components/global/Nav.scss
@@ -1,16 +1,29 @@
 #navbar {
+  display: block;
   h3 {
     font-size: 1.5rem;
   }
 }
 
-.sidebar {
-  background: white;
-  &--container {
-    padding: 1.5rem;
-    h3.ui.header {
-      font-size: 1.5rem;
-      margin-top: 2rem;
+#sidebar-container {
+  display: none;
+  .sidebar {
+    background: white;
+    &--container {
+      padding: 1.5rem;
+      h3.ui.header {
+        font-size: 1.5rem;
+        margin-top: 2rem;
+      }
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #sidebar-container {
+    display: block;
+  }
+  #navbar {
+    display: none;
   }
 }
