--- a/src/components/global/Footer.scss
+++ b/src/components/global/Footer.scss
@@ -20,6 +20,9 @@
   }
 
   .socials-list {
-    margin-top: 3rem;
+    margin-top: 2rem;
+    .social-item {
+      margin: 0 1rem 0 1rem;
+    }
   }
 }
