--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -42,8 +42,9 @@
   }
   .centered.row.members-list--container {
     .member-list--item {
-      margin-bottom: 2rem;
       .ui.fluid.card {
+        height: 50rem;
+        margin-bottom: 2rem;
         .content {
           .gatsby-image-wrapper {
             border-radius: 100%;
@@ -57,6 +58,7 @@
           }
           .socials {
             a {
+              margin: 0 1rem 0 1rem;
               .icon {
                 margin: auto;
               }
