--- a/src/components/pwa/Pwa.scss
+++ b/src/components/pwa/Pwa.scss
@@ -1,44 +1,22 @@
 //// Hero
 #hero-pwa {
   min-height: 100vh;
-  @media only screen and (max-width: 1200px) {
-    margin-top: 3rem;
-  }
   .hero-pwa-text {
     margin-left: 8rem;
-    @media only screen and (max-width: 1200px) {
-      margin-top: 3rem;
-      margin-left: 0;
-    }
     h1.ui.header {
       margin-bottom: 1rem;
     }
-  }
-  @media only screen and (max-width: 1200px) {
-    padding-bottom: 5rem;
   }
 }
 
 #pwa-container {
   padding: 10rem 0 8rem 0;
-  @media only screen and (max-width: 1200px) {
-    padding: 8rem 0 5rem 0;
-  }
   //// Characteristics
   #pwa-characteristic-container {
     .charact-item {
-      margin: auto;
-      @media only screen and (max-width: 1200px) {
-        max-width: 90%;
-        margin-bottom: 3rem;
-      }
       .ui.segment {
         padding: 3rem 0 3rem 0;
         margin-bottom: 2rem;
-        @media only screen and (max-width: 768px) {
-          max-width: 70%;
-          margin: auto auto 2rem auto;
-        }
       }
     }
   }
@@ -46,42 +24,25 @@
   //// Schema
   #pwa-characteristic-schema {
     margin-top: 15rem;
-    @media only screen and (max-width: 1200px) {
-      margin-top: 3rem;
-    }
     h2.ui.header {
       margin-bottom: 1rem;
     }
     .pwa-schema {
       margin: 5rem auto 0 auto;
-      @media only screen and (min-width: 1000px) {
-        max-width: 70%;
-      }
     }
   }
 
   //// Examples
   #pwa-examples {
     margin-top: 12rem;
-    @media only screen and (max-width: 1200px) {
-      margin-top: 8rem;
-    }
     .pwa-examples-header {
       margin-bottom: 1rem;
     }
     .example-item {
       margin: auto;
-      @media only screen and (max-width: 1200px) {
-        max-width: 90%;
-        margin-bottom: 3rem;
-      }
       .ui.segment {
         padding: 3rem 0 3rem 0;
         margin-bottom: 2rem;
-        @media only screen and (max-width: 768px) {
-          max-width: 70%;
-          margin: auto auto 1rem auto;
-        }
       }
     }
   }
@@ -89,16 +50,91 @@
   //// References
   #references-pwa-container {
     margin-top: 10rem;
-    @media only screen and (max-width: 768px) {
-      margin-top: 5rem;
-    }
     .reference-pwa-item {
       margin-top: 3rem;
-      .ui.header {
-        @media only screen and (max-width: 768px) {
+    }
+  }
+}
+
+//// Responsive ////
+
+@media only screen and (max-width: 768px) {
+  #pwa-container {
+    // Characteristics
+    #pwa-characteristic-container {
+      .charact-item {
+        .ui.segment {
+          max-width: 70%;
+          margin: auto auto 2rem auto;
+        }
+      }
+    }
+    //// Examples
+    #pwa-examples {
+      .example-item {
+        margin-bottom: 4rem;
+        .ui.segment {
+          max-width: 70%;
+          margin: auto auto 1rem auto;
+        }
+      }
+    }
+
+    //// References
+    #references-pwa-container {
+      margin-top: 5rem;
+      .reference-pwa-item {
+        .ui.header {
           margin-top: 2rem;
         }
       }
+    }
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  //// Schema
+  #pwa-characteristic-schema {
+    .pwa-schema {
+      max-width: 70%;
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  // Hero
+  #hero-pwa {
+    margin-top: 3rem;
+    padding-bottom: 5rem;
+    .hero-pwa-text {
+      margin-top: 3rem;
+      margin-left: 0;
+    }
+  }
+
+  #pwa-container {
+    padding: 8rem 0 5rem 0;
+    // characteristics
+    .charact-item {
+      max-width: 90%;
+      margin: 0 auto 3rem auto;
+      .ui.segment {
+        max-width: 70%;
+        margin: auto auto 2rem auto;
+      }
+    }
+    //// Schema
+    #pwa-characteristic-schema {
+      margin-top: 3rem;
+    }
+  }
+
+  //// Examples
+  #pwa-examples {
+    margin-top: 8rem;
+    .example-item {
+      max-width: 90%;
+      margin-bottom: 3rem;
     }
   }
 }
