--- a/src/components/ecommerce/Ecommerce.scss
+++ b/src/components/ecommerce/Ecommerce.scss
@@ -1,26 +1,13 @@
+// Hero
 #hero-ecommerce-container {
-  @media only screen and (min-width: 1200px) {
-    min-height: 100vh;
-  }
-  @media only screen and (max-width: 1200px) {
-    margin-top: 57px;
-  }
   .hero-ecommerce-heading {
     margin-bottom: 1rem;
   }
-  .hero-ecommerce-img {
-    @media only screen and (max-width: 1200px) {
-      margin-top: 3rem;
-      margin-bottom: 4rem;
-    }
-  }
 }
 
+// References list
 #references-ecommerce-container {
   padding: 8rem 0 8rem 0;
-  @media only screen and (max-width: 1200px) {
-    padding: 5rem 0 5rem 0;
-  }
   .references-ecommerce-heading {
     margin-bottom: 2rem;
   }
@@ -28,7 +15,29 @@
     margin-bottom: 3rem;
     .reference-item-heading {
       margin-bottom: 1rem;
-      @media only screen and (max-width: 1200px) {
+    }
+  }
+}
+
+//// Responsive ////
+@media only screen and (min-width: 1200px) {
+  #hero-ecommerce-container {
+    min-height: 100vh;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  #hero-ecommerce-container {
+    margin-top: 57px;
+    .hero-ecommerce-img {
+      margin-top: 3rem;
+      margin-bottom: 4rem;
+    }
+  }
+  #references-ecommerce-container {
+    padding: 5rem 0 5rem 0;
+    .reference-item {
+      .reference-item-heading {
         margin-top: 2rem;
       }
     }
