--- a/src/components/blog/BlogCard.scss
+++ b/src/components/blog/BlogCard.scss
@@ -1,4 +1,4 @@
-.five.wide.computer.sixteen.wide.mobile.eight.wide.tablet.column.blogcard {
+.blogcard {
   z-index: 0;
   margin-bottom: 3rem;
   .react-reveal {
