--- a/src/components/company/CompanyPage.scss
+++ b/src/components/company/CompanyPage.scss
@@ -20,20 +20,20 @@
   }
 }
 
-//// Members list
-.ui.container.ui.grid.members-list {
+//// Team list
+#team-container {
   padding-top: 8rem;
   padding-bottom: 10rem;
-  .centered.row.members-list--container {
-    .member-list--item {
-      .ui.fluid.card {
+  .team-list {
+    .team-item {
+      .team-item--card {
         height: 50rem;
         margin-bottom: 2rem;
         .content {
           .gatsby-image-wrapper {
             border-radius: 100%;
           }
-          h3 {
+          .team-item--header {
             margin-bottom: 0.3rem;
           }
           .meta.employee-job {
@@ -55,7 +55,7 @@
 }
 
 //// Carousel locaux
-.ui.fluid.container.secondary.office-carousel {
+.secondary.office-carousel {
   padding: 6rem 0 6rem 0;
   .office-carousel--carousel {
     min-height: 700px;
@@ -63,7 +63,7 @@
 }
 
 // Center icon in button for carousel
-.ui.button.swiper-button-next {
+.swiper-button-next {
   display: flex;
   justify-content: center;
   opacity: 0.5;
@@ -72,7 +72,7 @@
   }
 }
 
-.ui.button.swiper-button-prev {
+.swiper-button-prev {
   display: flex;
   justify-content: center;
   opacity: 0.5;
@@ -90,7 +90,7 @@
 }
 
 //// Header contact form
-.ui.container.contact-header {
+.contact-header {
   padding: 8rem 0 6rem 0;
   .contact-header--header {
     margin-top: 4rem;
@@ -98,7 +98,7 @@
 }
 
 //// Contact form
-.ui.fluid.container.primary.contact-form-container {
+.contact-form-container {
   padding: 8rem 3rem 8rem 3rem;
   .row.contact-form {
     padding: 3rem;
@@ -111,6 +111,7 @@
       background: #f9f9f9;
       border: 0;
       color: black;
+      font-family: Poppins;
     }
     .submit-btn {
       margin: 3rem auto auto auto;
@@ -140,12 +141,13 @@
   }
 
   // MembersList
-  .ui.container.ui.grid.members-list {
+  #team-container {
     padding-bottom: 3rem;
+    padding-top: 3rem;
   }
 
   // Carousel
-  .ui.fluid.container.secondary.office-carousel {
+  .secondary.office-carousel {
     padding: 3rem 0 3rem 0;
     .office-carousel--carousel {
       min-height: 200px;
@@ -153,12 +155,12 @@
   }
 
   // Header contact form
-  .ui.container.contact-header {
+  .contact-header {
     padding: 5rem 0 4rem 0;
   }
 
   // Contact form
-  .ui.fluid.container.primary.contact-form-container {
+  .contact-form-container {
     padding: 5rem 1rem 5rem 1rem;
     .row.contact-form {
       padding: 1rem;
