--- a/src/templates/prism-material-dark.css
+++ b/src/templates/prism-material-dark.css
@@ -25,14 +25,14 @@ code[class*="language-"]::-moz-selection,
 pre[class*="language-"]::-moz-selection,
 code[class*="language-"] ::-moz-selection,
 pre[class*="language-"] ::-moz-selection {
-  background: #363636;
+  background: #cce2ff;
 }
 
 code[class*="language-"]::selection,
 pre[class*="language-"]::selection,
 code[class*="language-"] ::selection,
 pre[class*="language-"] ::selection {
-  background: #363636;
+  background: #cce2ff;
 }
 
 :not(pre) > code[class*="language-"] {
